[package]
edition = "2018"
license = "Apache 2.0"
name = "ternoa-nfts"
version = "0.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, features = [
    "derive",
], version = "2.3.1" }
scale-info = { version = "1.0", default-features = false, features = [
    "derive",
] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, version = "4.0.0-dev", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
serde = { optional = true, version = "1.0.101" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
log = { default-features = false, version = "0.4.14" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.1.0-dev", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
